# deep-work-assistant

./: .gitignore  DeepWorkAssistant_startup.vbs  README.md  local_config.example.bat  pyproject.toml  run_deep_work_assistant.bat
deep_work_assistant/: analytics.py  cli.py  engine.py  git_integration.py  history.py  interactive_popup.py  kanban.py  messages.py  mindfulness.py  notifier.py  obsidian_log.py  overlay.py  pomodoro.py  runtime.py  voice.py
tests/: test_agent_detection.py  test_analytics.py  test_engine.py  test_git_integration.py  test_interactive_popup.py  test_kanban.py  test_laptop_profile.py  test_messages.py  test_mindfulness.py  test_notifier.py  test_obsidian_log.py  test_pomodoro.py  test_streak.py
